--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "discatch",
+  "name": "discapture",
   "version": "0.1.0",
   "description": "Discord chat capture and archival tool",
   "type": "module",
   "private": true,
   "scripts": {
     "build": "bash scripts/build.sh",
-    "rebuild": "bash scripts/build.sh",
     "dev": "bash scripts/build.sh && electrobun dev",
     "start": "bash scripts/build.sh && electrobun dev"
   },
